tests/errors/invalid_cast.lx
@module "main"

pub const main -> fn () int {
    let x: int = cast<int>("hello");
    return 0;
}
